--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,6 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
 .App-header {
   min-height: 100vh;
   display: flex;
@@ -26,7 +20,11 @@
   color: rgb(112, 76, 182);
 }
 
-@keyframes App-logo-float {
+.subTitle {
+  color: #1b1b1b;
+}
+
+/* @keyframes App-logo-float {
   0% {
     transform: translateY(0);
   }
@@ -36,4 +34,4 @@
   100% {
     transform: translateY(0px);
   }
-}
+} */
